Update composer.json to phunkie/phunkie-console

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "md/phunkie-console",
+  "name": "phunkie/phunkie-console",
   "description": "A console for Phunkie development",
   "license":      "MIT",
   "authors": [
