--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": "^8.0",
-    "phunkie/phunkie": "^0.11.5",
+    "phunkie/phunkie": "0.11.7",
     "nikic/php-parser": "^5.0"
   },
   "require-dev": {
